    from ubuntu-dev-tools into devscripts (Closes: #568481).
  * Remove EOL whitespaces (Closes: #502525).
  * dget.1: Mention `debcheckout` under `SEE ALSO`. Thanks to Paul Menzel for
    the patch. (Closes: #596245)
  * debchange, uupdate: Use dpkg-vendor instead of lsb_release.
  * Merge from Ubuntu:
    + debuild: Enforce Ubuntu merge policy.

  [ David Prévot ]
  * Partial manual pages convention review (Closes: #626015).

 -- Benjamin Drung <bdrung@debian.org>  Tue, 24 May 2011 12:09:19 +0200

devscripts (2.10.73) unstable; urgency=low

  [ James Vega ]
  * uscan:
    + Use the correct path when repacking zip files.  (Closes: #622889)
    + Make file show all matched file types instead of just the first.
      (Closes: #574155)
  * uupdate: Handle hidden files when the upstream archive doesn't contain its
    files under one top-level directory.  (Closes: #601945)
  * bts:
    + Indicate version argument is optional for done command.  (Closes:
      #623567)
    + Silence warnings with (un)subscribe command when no email is specified.
      (Closes: #626086)
    + Indicate email argument is optional for (un)subscribe commands.
  * debsnap:
    + Add support for downloading binary packages.  Thanks to Timo Juhani
      Lindfors for the patch.  (Closes: #587523)
    + Only download a file if it doesn't exist or its hashsum doesn't match
      the one specified by snapshot.d.o.
  * debchange:
    + Add -M option to use debian/control's Maintainer information.  Thanks to
      Modestas Vainius for the patch.  (Closes: #560900)
    + Update recognized Ubuntu releases (- jaunty/karmic, + oneiric).
  * dget: Improve wget()'s handling of file/copy URIs.  Thanks to Adam
    Borowski for the suggestions.
    + Allow relative paths for file/copy URIs.
    + Follow symlinks when copying/hard linking files from a local cache.
      (Closes: #515852)
    + Call system() with a list of arguments to prevent shell interpolation of
      the command.

  [ Benjamin Drung ]