@@ -128,6 +128,9 @@ This is the \fB\-m\fR option.
 .B DEBSIGN_KEYID
 And this is the \fB\-k\fR option.
 .TP
+.B DEBSIGN_ALWAYS_RESIGN
+Always re-sign files even if they are already signed, without prompting.
+.TP
 .B DEBRELEASE_DEBS_DIR
 This specifies the directory in which to look for the \fI.changes\fR
 and \fI.dsc\fR files, and is either an absolute path or relative to
